<resources>
    <string name="app_name">PMS_TNLA2024</string>
    <string name="welcome_text">Welcome, <b>Mr./Ms. xxx,</b>Presiding Officer</string>
    <string name="login">Login</string>
    <string name="booth_number_name">Booth Number / Name :</string>
    <string name="assembly_constituency_ac">Assembly Constituency (AC)</string>
    <string name="parliment_constituency_pc">Parliment Constituency (PC)</string>
    <string name="que_status">Que Status</string>
    <string name="logout">Logout</string>
    <string name="change_pin">Change PIN</string>
    <string name="new_pin">NEW PIN</string>
    <string name="repeat_pin">REPEAT PIN</string>
    <string name="submit">Submit</string>
    <string name="final_votes_polled">Final Votes Polled</string>
    <string name="total_votes_polled">Total Votes polled:</string>
    <string name="hint_count">COUNT</string>
    <string name="total_votes_polled_tg">Total Votes polled (TG):</string>
    <string name="total_electors_as_per_roll">Total Electors as per Roll :</string>
    <string name="total_votes_polled_male">Total Votes polled (Male):</string>
    <string name="pre_poll_day">Pre-Poll Day</string>
    <string name="poll_day">Poll Day</string>
    <string name="assembly_constituency">Assembly Constituency</string>
    <string name="mock_poll">Mock Poll</string>
    <string name="mock_poll_status">Mock Poll Status</string>
    <string name="mock_poll_conducted">Mock Poll Conducted?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="polling_completed">Polling Completed ?</string>
    <string name="please_enter_the_status_of_poll_completion">Please enter the status of Poll Completion</string>
    <string name="poll_completed">Poll Completed</string>
    <string name="poll_started">Poll Started</string>
    <string name="select_time">Select Time</string>
    <string name="commencement_of_poll">Commencement of Poll</string>
    <string name="polling_started">Polling Started ?</string>
    <string name="pre_poll_day_information">Pre Poll day information</string>
    <string name="y">Y</string>
    <string name="n">N</string>
    <string name="polling_party_reached">Polling Party Reached?</string>
    <string name="polling_material_reached">Polling Material Reached?</string>
    <string name="people_in_que">People In Que</string>
    <string name="back">back</string>
    <string name="current_time">Current Time</string>
    <string name="poll_booth">Poll Booth</string>
    <string name="time_count">Time Count</string>
    <string name="parent_account">Parent Account</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="take_photo">Take Photo</string>
    <string name="hint_enter_pin">ENTER PIN</string>
    <string name="hint_phone_number">PHONE NUMBER</string>
    <string name="retake_photo">Retake Photo</string>
</resources>