<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".Activity.PollDayActivity">

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/back"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerVertical="true">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/back"
                    app:tint="@color/new_bg" />

            </RelativeLayout>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/title_text"
                android:src="@mipmap/logo"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/poll_day"
                android:textColor="@color/new_bg"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/home"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/home"
                app:tint="@color/new_bg" />

        </RelativeLayout>

    </RelativeLayout>

    <View
        android:id="@+id/view_white"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/header_layout"
        android:background="@color/edit_text_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"  >

        <Button
            android:id="@+id/mock_poll"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/mock_poll"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="16sp" />

        <Button
            android:id="@+id/poll_started"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/poll_started"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/dropdown"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg">

            <TextView
                android:id="@+id/select_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center_horizontal"
                android:text="@string/select_time"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="16sp" />

        </RelativeLayout>

        <Button
            android:id="@+id/poll_completed"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/poll_completed"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="16sp" />

        <Button
            android:id="@+id/final_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/final_votes_polled"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>