<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFF"
    tools:context=".Activity.QueStatusEntryActivity">

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <RelativeLayout
            android:id="@+id/back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:layout_marginLeft="5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/back"
                app:tint="@color/new_bg" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/back">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/opensans_regular"
                android:text="QUE STATUS ENTRY"
                android:textAllCaps="true"
                android:textColor="@color/new_bg"
                android:textSize="16dp"
                android:textStyle="bold" />

        </RelativeLayout>

    </RelativeLayout>

    <View
        android:id="@+id/view_white"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/header_layout"
        android:background="@color/edit_text_bg" />

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:scrollbars="vertical"
       android:layout_below="@+id/view_white">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/poll_booth"
               android:fontFamily="@font/opensans_regular"
               android:textSize="16sp"
               android:layout_marginTop="35sp"
               android:layout_marginLeft="35sp"
               android:layout_marginRight="35sp"
               android:textColor="#000"
               android:textAllCaps="true"
               android:textAlignment="center"
               android:textStyle="bold"/>

           <TextView
               android:id="@+id/boothName"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="Booth Number / Name"
               android:layout_marginTop="10sp"
               android:fontFamily="@font/opensans_regular"
               android:textSize="18sp"
               android:layout_marginLeft="35sp"
               android:layout_marginRight="35sp"
               android:textColor="@color/new_bg"
               android:textAllCaps="true"
               android:textStyle="bold"
               android:textAlignment="center" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/current_time"
               android:layout_marginTop="20sp"
               android:fontFamily="@font/opensans_regular"
               android:textSize="16sp"
               android:textColor="#000"
               android:textAllCaps="true"
               android:layout_marginLeft="35sp"
               android:layout_marginRight="35sp"
               android:textStyle="bold"
               android:textAlignment="center" />

           <TextView
               android:id="@+id/tvCurrentTime"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="13:28"
               android:layout_marginTop="10sp"
               android:fontFamily="@font/opensans_regular"
               android:textSize="18sp"
               android:layout_marginLeft="35sp"
               android:layout_marginRight="35sp"
               android:textColor="@color/new_bg"
               android:textStyle="bold"
               android:textAllCaps="true"
               android:textAlignment="center" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/people_in_que"
               android:layout_marginTop="20sp"
               android:layout_marginLeft="35sp"
               android:layout_marginRight="35sp"
               android:fontFamily="@font/opensans_regular"
               android:textSize="16sp"
               android:textColor="#000"
               android:textAllCaps="true"
               android:textStyle="bold"
               android:textAlignment="center" />

           <EditText
               android:id="@+id/edtQueCount"
               android:layout_width="match_parent"
               android:layout_height="45dp"
               android:layout_marginTop="10sp"
               android:background="@drawable/edittext"
               android:layout_gravity="center_horizontal"
               android:inputType="number"
               android:hint="@string/hint_count"
               android:textColorHint="#808080"
               android:layout_marginLeft="35sp"
               android:layout_marginRight="35sp"
               android:textAlignment="center"
               android:maxLength="10"
               android:textColor="#000"
               android:fontFamily="@font/opensans_regular"
               android:textStyle="bold"
               android:textSize="16sp" />

           <Button
               android:id="@+id/btn_takePhoto"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:layout_marginLeft="35dp"
               android:layout_marginRight="35dp"
               android:layout_marginTop="20sp"
               android:background="@drawable/button_bg"
               android:fontFamily="@font/opensans_regular"
               android:text="@string/take_photo"
               android:textStyle="bold"
               android:textAllCaps="true"
               android:textSize="14sp"
               style="@style/Base.ButtonStyle.Red"
               android:textColor="@color/colorPrimary" />

          <LinearLayout
              android:id="@+id/capturedImagePreview"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:layout_marginTop="20sp"
              android:layout_marginLeft="35dp"
              android:layout_marginRight="35dp"
              android:visibility="gone">

              <RelativeLayout
                  android:layout_width="match_parent"
                  android:layout_height="180sp"
                  android:background="@drawable/edittext"
                  android:layout_weight="1">

                  <ImageView
                      android:id="@+id/previewImage"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_margin="1sp"
                      android:scaleType="fitXY"/>

              </RelativeLayout>

              <Button
                  android:id="@+id/btn_retakePhoto"
                  android:layout_width="match_parent"
                  android:layout_height="50dp"
                  style="@style/Base.ButtonStyle.Red"
                  android:text="@string/retake_photo"
                  android:textStyle="bold"
                  android:textAllCaps="true"
                  android:textSize="14sp"
                  android:layout_marginTop="-2sp"
                  android:textColor="@color/colorPrimaryDark" />

          </LinearLayout>

           <Button
               android:id="@+id/btn_submit"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:layout_marginLeft="35dp"
               android:layout_marginRight="35dp"
               android:layout_marginTop="30sp"
               android:background="@drawable/button_bg"
               android:fontFamily="@font/opensans_regular"
               android:text="@string/submit"
               android:textStyle="bold"
               android:textAllCaps="true"
               android:textSize="14sp"
               android:textColor="@color/colorPrimary" />

           <Button
               android:id="@+id/btn_back"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:layout_marginLeft="35dp"
               android:layout_marginRight="35dp"
               android:layout_marginTop="12sp"
               android:layout_marginBottom="10sp"
               android:background="@drawable/button_bg"
               android:fontFamily="@font/opensans_regular"
               android:text="@string/back"
               android:textStyle="bold"
               android:textAllCaps="true"
               android:textSize="14sp"
               android:textColor="@color/colorPrimary" />

       </LinearLayout>

   </ScrollView>

</RelativeLayout>