<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".Activity.MockPollActivity">

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RelativeLayout
                android:id="@+id/back"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerVertical="true" >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/back"
                    app:tint="@color/new_bg" />

            </RelativeLayout>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                android:layout_toLeftOf="@+id/title_text"
                android:src="@mipmap/logo" />

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/poll_started"
                android:textAllCaps="true"
                android:textColor="@color/new_bg"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/home"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/home"
                app:tint="@color/new_bg" />

        </RelativeLayout>

    </RelativeLayout>

    <View
        android:id="@+id/view_white"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/header_layout"
        android:background="@color/edit_text_bg" />

    <TextView
        android:id="@+id/pollday_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/view_white"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/opensans_regular"
        android:padding="10dp"
        android:text="@string/commencement_of_poll"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/mock_poll_conducted"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/pollday_text"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/polling_started"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/yes_no_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mock_poll_conducted">

        <RelativeLayout
            android:id="@+id/check_yes"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/image_bg_checkbox">

            <ImageView
                android:id="@+id/check_image_yes"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/tick"
                android:visibility="gone" />

        </RelativeLayout>

        <TextView
            android:id="@+id/yes_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/check_yes"
            android:fontFamily="@font/opensans_regular"
            android:padding="10dp"
            android:text="@string/yes"
            android:textAlignment="center"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/check_no"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/yes_text"
            android:background="@drawable/image_bg_checkbox">

            <ImageView
                android:id="@+id/check_image_no"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/cancel"
                android:visibility="gone" />

        </RelativeLayout>

        <TextView
            android:id="@+id/no_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/check_no"
            android:fontFamily="@font/opensans_regular"
            android:padding="10dp"
            android:text="@string/no"
            android:textAlignment="center"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="16sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/submit_btn_mock_poll"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/yes_no_layout"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/submit"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"/>


</RelativeLayout>